--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/bin/reth-malachite.rs"
 # Core dependencies
 anyhow = "1.0.98"
 async-trait = "0.1"
+base64 = "0.22"
 bincode = "1.3"
 bytes = "1.8"
 clap = { version = "4.5", features = ["derive"] }
